[project]
name = "cca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-charts-plugin>=0.0.13",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-print-site-plugin>=2.8",
]
